--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,11 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'junit:junit:4.13.1'
+    implementation 'org.springframework:spring-jdbc:5.3.9'
+    implementation 'mysql:mysql-connector-java:8.0.26'
+    testImplementation 'org.springframework:spring-test:5.3.9'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    implementation group: 'org.springframework', name: 'spring-jdbc', version: '5.2.0.RELEASE'
 }
 
 tasks.named('test') {
