--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ dependencies {
     implementation 'junit:junit:4.13.1'
     implementation 'org.springframework:spring-jdbc:5.3.9'
     implementation 'mysql:mysql-connector-java:8.0.26'
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework:spring-test:5.3.9'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
